# neural-lace

./: .gitattributes  .gitignore  .pr-description.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  sync.example.sh
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
build-doctrine/: CHANGELOG.md  README.md
build-doctrine-orchestrator/: README.md  pyproject.toml
build-doctrine-orchestrator/src/build_doctrine_orchestrator/: __init__.py  dag.py  dispatcher.py  state.py
build-doctrine-orchestrator/tests/: __init__.py  test_dag.py  test_state.py
build-doctrine-templates/: CHANGELOG.md  README.md
docs/: DECISIONS.md  HANDOFF.md  RESUME-HERE.md  agent-incentive-map.md  architecture-overview.md  backlog.md  best-practices.md  build-doctrine-roadmap.md  business-patterns-workflow.md  claude-code-quality-strategy.md  conv-tree-decisions-panel-spec.md  conv-tree-dispatch-reader.md  dispatch-decision-queue-tools.md  doc-writing-patterns.md  failure-modes.md  findings.md  harness-architecture-history.md  harness-architecture.md  harness-guide.md  harness-hygiene-roadmap.md  harness-review-audit-questions.md  harness-strategy.md  no-verify-friction.md  operator-todo.md  prd-conversation-tree.md  prd.md  ux-checklist.md  ux-guidelines.md
evals/: README.md
learning/: README.md
principles/: core-values.md  diagnosis-protocol.md  evaluation-discipline.md  forward-compatibility.md  harness-hygiene.md  permission-model.md  progressive-autonomy.md  security-posture.md  ux-philosophy.md
telemetry/: README.md
tools/: circuit-health-probe.sh
(+1809 files in other folders)
